# tdd_pytest_playwright_demo

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
tdd_demo/: conftest.py  list_boards.py  main.py  models.py  test_main.py  test_ptt_stock.py
